--- a/Vue-Project/package.json
+++ b/Vue-Project/package.json
@@ -12,6 +12,7 @@
     "vee-validate": "^2.1.7",
     "vue": "^2.6.2",
     "vue-js-modal": "^1.3.28",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-session": "^1.0.0"
   },
