--- a/Vue-Project/package.json
+++ b/Vue-Project/package.json
@@ -10,20 +10,21 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "vee-validate": "^2.1.7",
-    "vue": "^2.6.2",
+    "vue": "^2.6.7",
     "vue-js-modal": "^1.3.28",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-session": "^1.0.0"
+    "vue-session": "^1.0.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-eslint": "^3.4.1",
+    "@vue/cli-service": "^3.4.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.2"
+    "eslint": "^5.14.1",
+    "eslint-plugin-vue": "^5.2.2",
+    "vue-template-compiler": "^2.6.7"
   },
   "eslintConfig": {
     "root": true,
