--- a/Vue-Project/package.json
+++ b/Vue-Project/package.json
@@ -1,6 +1,8 @@
 {
   "name": "PatronusBankingServices",
-  "version": "0.1.0",
+  "description": "UI for Online Banking Service",
+  "version": "0.2.0",
+  "author": "Akash Ravi <akashkravi@gmail.com>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,23 +10,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
     "vee-validate": "^2.1.7",
-    "vue": "^2.6.7",
+    "vue": "^2.6.8",
     "vue-js-modal": "^1.3.28",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vue-session": "^1.0.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.1",
     "@vue/cli-plugin-eslint": "^3.4.1",
     "@vue/cli-service": "^3.4.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.0",
     "eslint-plugin-vue": "^5.2.2",
-    "vue-template-compiler": "^2.6.7"
+    "vue-template-compiler": "^2.6.8"
   },
   "eslintConfig": {
     "root": true,
