--- a/Vue-Project/package.json
+++ b/Vue-Project/package.json
@@ -10,6 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "datatables.net": "^1.10.19",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.8",
     "vue-js-modal": "^1.3.28",
